# python-mcp-server

./: LICENSE  README.md  pyproject.toml  setup.py  weather.py
codesignal/: chunk1.py  chunk2.py  chunk3.py  comparing1.py  comparing2.py  comparing3.py  comparing4.py  embeddings.py  embeddings2.py  embeddings3.py  hallucination.py  hallucination2.py  hallucination3.py  mcp.py  mcp2.py  mcp3.py  mcp4.py  mcp5.py
codesignal/chroma/: main.py  retrive.py
codesignal/chroma/data/: corpus.json
codesignal/chroma/scripts/: llm.py
codesignal/chroma/vector_db/: handler.py
codesignal/constrained-generation/: main.py  main_tmp.py
codesignal/iterative-retrieval/: README.md  main.py
codesignal/lexical-embedding/: main.py
codesignal/metadata-filtering/: main.py
codesignal/metadata-filtering/data/: __init__.py  loader.py
codesignal/metadata-filtering/vector_db/: __init__.py  handler.py
codesignal/overlaps-customization/: main.py
projects/MCPServer-FastAPI-ASGI_App/: README.md  agent.py  pyproject.toml
projects/MCPServer-FastAPI-ASGI_App/app/: main.py
projects/Multi-QueryAgentFlowWithToolCaching/: README.md  agent.py  agent_invalidade_cache.py  pyproject.toml  simple_agent_test.py
projects/auth/: agent.py
projects/auth/app/: auth.py  main.py  mcp_server.py  shopping_list.py
projects/weather-server/: mcp.json  weather.py
tests/: __init__.py  test_weather.py
