[project]
name = "python-mcp-server"
version = "0.1.0"
description = "A simple MCP server to query DeFi data"
readme = "README.md"
authors = [
    { name = "Aquental", email = "antonio.quental@gmail.com" },
]
requires-python = ">=3.12.6"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.pytest.coverage]
include = ["weather.py"]
exclude = ["tests/*", "*.egg", "build", "dist"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tests"]

[tool.uv.workspace]
members = ["projects/MCPServer-FastAPI-ASGI_App"]

[project.scripts]
weather-server = "weather:mcp.run"
