[project]
name = "multi-query-agent-flow"
version = "0.1.0"
description = "Multi-Query Agent Flow With Tool Caching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.1",
    "asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
